Modify: Update README and .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,17 @@
 *.tar.gz
 *.rar
 
+# IDE Files #
+*.classpath
+*.project
+*.prefs
+.idea/*
+.settings/*
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-build/*
+# Build Files #
 out/*
+build/*
 bin/*
