--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -12,5 +12,6 @@ repositories {
 }
 
 dependencies {
+    compile project(':routing-api')
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
