--- a/routing/build.gradle
+++ b/routing/build.gradle
@@ -11,6 +11,14 @@ repositories {
     mavenCentral()
 }
 
+jar {
+    manifest {
+//        attributes 'Main-Class': 'eco.data.m3.routing.simulations.SimpleSenderTest'
+        attributes 'Main-Class': 'eco.data.m3.routing.simulations.SimReceiverTest'
+    }
+}
+
+
 dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     testCompile group: 'junit', name: 'junit', version: '4.12'
