--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@
 *.prefs
 .idea/*
 .settings/*
+.vscode/*
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
@@ -36,3 +37,4 @@ hs_err_pid*
 out/*
 build/*
 bin/*
+/.gradle/
