--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,6 @@
-plugins {
-    id 'java'
-}
-
-group 'eco.data.m3'
-version '0.1'
-
-sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+subprojects {
+    apply plugin : "java"
+    repositories {
+        mavenCentral()
+    }
 }
