--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,7 @@
-rootProject.name = 'M3'
 include 'routing'
 include 'routing-api'
 include 'EC'
 include 'cli'
 include 'android'
-include 'web'
+include 'routing-web'
 
