MODIFY: edit build script to make cli can be built into a runnable jar

--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -11,6 +11,19 @@ repositories {
     mavenCentral()
 }
 
+task copyDependencies(type: Copy) {
+    from configurations.runtime
+    into 'build/libs/lib'
+}
+jar.dependsOn(copyDependencies)
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'eco.data.m3.cli.MainEntry'
+        attributes 'Class-Path': '. lib/'
+    }
+}
+
 dependencies {
     compile project(':routing-api')
     testCompile group: 'junit', name: 'junit', version: '4.12'
