--- a/routing-v2/build.gradle
+++ b/routing-v2/build.gradle
@@ -1,9 +1,10 @@
 plugins {
     id 'java'
+	id 'maven-publish'
 }
 
 group 'eco.data.m3'
-version '0.1'
+version '0.1.7'
 
 sourceCompatibility = 1.8
 
@@ -17,6 +18,30 @@ jar {
     }
 }
 
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            //指定group/artifact/version信息，可以不填。默认使用项目group/name/version作为groupId/artifactId/version
+            groupId project.group
+            artifactId project.name
+            version project.version
+            //如果是war包填写components.web，如果是jar包填写components.java
+            from components.java
+        }
+    }
+    repositories {
+        maven {
+            //指定要上传的maven私服仓库
+            url = "http://nexus.develop.yomob.com/repository/maven-mcube/"
+            //认证用户和密码
+            credentials {
+                username 'admin'
+                password 'admin123'
+            }
+        }
+    }
+}
 
 dependencies {
     compile project(':net')
