--- a/routing-v2/build.gradle
+++ b/routing-v2/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'eco.data.m3'
-version '0.1.7'
+version '0.1.8'
 
 sourceCompatibility = 1.8
 
@@ -44,7 +44,7 @@ publishing {
 }
 
 dependencies {
-    compile project(':net')
+    compile project(':netlib:net')
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
