--- a/routing-v2/build.gradle
+++ b/routing-v2/build.gradle
@@ -44,7 +44,8 @@ publishing {
 }
 
 dependencies {
-    compile project(':netlib:net')
+    compile project(':netlib:net2')
+    compile project(':content:content-sqlite')
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
